--- a/game.project
+++ b/game.project
@@ -21,6 +21,7 @@ developer = Igor Suntsev
 dependencies#0 = https://github.com/britzl/ludobits/archive/6.8.0.zip
 dependencies#1 = https://github.com/britzl/defold-input/archive/master.zip
 dependencies#2 = https://github.com/britzl/monarch/archive/refs/tags/3.4.6.zip
+dependencies#3 = https://github.com/rgrams/defold-curved-world/archive/refs/heads/master.zip
 
 [physics]
 type = 3D
